Bug 51699 - regression: 5b99c7cd340f7 broke SwapbuffersWait FALSE
Summary: regression: 5b99c7cd340f7 broke SwapbuffersWait FALSE
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-03 15:20 UTC by Eric Anholt
Modified: 2012-07-04 02:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Eric Anholt 2012-07-03 15:20:22 UTC
I recently updated from my distro server/2d driver to master to pick up the ARB_create_context changes.  When I did, all GL apps that vblank synced would hang in dri2GetBuffersWithFormat.

I bisected the failure down to:

commit 5b99c7cd340f782d3057d4257865c5feb96b71f0
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon May 28 10:55:49 2012 +0100

    uxa/dri: Enable vblank scheduling even with pageflipping disabled
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

It turns out that what made me different was that my X config had SwapBuffersWait disabled for performance testing purposes.  Removing that line lets gnome-shell start again.
Comment 1 Chris Wilson 2012-07-04 02:15:20 UTC
commit 5026b6a147f411582af24ffd17c87a81da5eea0b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jul 4 09:39:59 2012 +0100

    uxa: Install the drm_wakeup_handler for vblank events in !use_page_flipping
    
    Even if page-flipping itself is disabled, we still want to allow the
    client to schedule wakeups for some future vblank which requires
    listening to the kernel vblank notifications.
    
    Reported-by: Eric Anholt <eric@anholt.net>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=51699
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.